# phoenix_sdr_controller

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DISCOVERY_INTEGRATION.md  FIX_SUMMARY.md  ISSUE_relay_mode_gui.md  ISSUE_relay_mode_gui_ANALYSIS.md  LICENSE  PROGRESS.md  Phoenix SDR TCP Control Interface.md  README.md  RELAY_MODE_TEST.md  build.ps1  deploy_release.ps1  phoenix-build.json  phoenix_sdr_window.ini  relay_controller.py  test_protocol.py  vcpkg.json  wwv_bcd.csv  wwv_carrier.csv  wwv_channel.csv  wwv_debug_marker.csv  wwv_markers.csv  wwv_markers_corr.csv  wwv_subcarrier.csv  wwv_sync.csv  wwv_tick_corr.csv  wwv_ticks.csv  wwv_tone_500.csv  wwv_tone_600.csv
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  config.yml  documentation-update.yml
.github/workflows/: release.yml
Controller Agent/: README.md  REPORT_Steve_20241220.md  last_run.ini  optimized_params - Copy.ini  optimized_params.ini  run_controller.bat  test_connection.bat
Controller Agent/src/: __init__.py  controller.py  sdr_controller.py  send_command.py  telemetry_listener.py  test_telemetry.py  waterfall_controller.py
cmake/: version.h.in
docs/: BUILD.md  BUILD_AND_RELEASE.md  DEBUG_RELAY.md  RELAY_LATENCY.md  UDP_TELEMETRY_PROTO.md
include/: aff.h  app_state.h  common.h  process_manager.h  sdr_protocol.h  tcp_client.h  udp_telemetry.h  ui_core.h  ui_layout.h  ui_widgets.h  version.h
resources/: generate_icon.ps1  phoenix_sdr.rc
scripts/: build.ps1
src/: aff.c  app_state.c  main.c  process_manager.c  sdr_protocol.c  tcp_client.c  udp_telemetry.c  ui_core.c  ui_layout.c  ui_layout_debug.c  ui_layout_edit.c  ui_widgets.c
src/bdc/: bcd_decoder.c  bcd_decoder.h
